--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@vuepress/bundler-vite": "2.0.0-rc.14",
     "@vuepress/plugin-search": "2.0.0-rc.42",
     "artalk": "^2.9.0",
+    "dashjs": "^4.7.4",
+    "hls.js": "^1.5.15",
     "vidstack": "^1.12.9",
     "vue": "^3.4.31",
     "vuepress": "2.0.0-rc.14",
