--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "vuepress": "2.0.0-rc.14",
     "vuepress-plugin-search-pro": "2.0.0-rc.52",
     "vuepress-theme-hope": "2.0.0-rc.52"
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
