--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.14",
+    "@vuepress/plugin-blog": "^1.9.4",
     "@vuepress/plugin-docsearch": "2.0.0-rc.43",
+    "@vuepress/plugin-register-components": "^1.9.10",
     "@vuepress/plugin-search": "2.0.0-rc.39",
     "artalk": "^2.9.0",
     "dashjs": "^4.7.4",
