--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.14",
-    "@vuepress/plugin-blog": "^1.9.4",
-    "@vuepress/plugin-docsearch": "2.0.0-rc.43",
-    "@vuepress/plugin-register-components": "^1.9.10",
-    "@vuepress/plugin-search": "2.0.0-rc.39",
-    "artalk": "^2.9.0",
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "@vuepress/plugin-blog": "2.0.0-rc.57",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.57",
+    "@vuepress/plugin-markdown-tab": "2.0.0-rc.47",
+    "@vuepress/plugin-register-components": "2.0.0-rc.54",
+    "@vuepress/plugin-search": "2.0.0-rc.55",
+    "artalk": "^2.9.1",
     "dashjs": "^4.7.4",
     "flowchart.ts": "^3.0.1",
-    "hls.js": "^1.5.15",
-    "vidstack": "^1.12.9",
-    "vue": "^3.5.5",
-    "vuepress": "2.0.0-rc.14",
-    "vuepress-plugin-search-pro": "2.0.0-rc.52",
-    "vuepress-theme-hope": "2.0.0-rc.52"
+    "hls.js": "^1.5.17",
+    "sass-embedded": "^1.80.4",
+    "vidstack": "^1.12.12",
+    "vue": "^3.5.12",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-search-pro": "2.0.0-rc.59",
+    "vuepress-theme-hope": "2.0.0-rc.59"
   },
   "dependencies": {
     "moment": "^2.30.1"
