--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
-
+        with:
+          version: 9.13.2
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
