--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: 安装依赖
         run: |
-          corepack enable
+          corepack enable --install-directory=$(dirname $(which pnpm)) --no-signature-verification
           pnpm install --frozen-lockfile
 
       - name: 构建文档
