--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9.13.2
+          version: 10
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
@@ -33,6 +33,7 @@ jobs:
 
       - name: 安装依赖
         run: |
+          corepack enable
           pnpm install --frozen-lockfile
 
       - name: 构建文档
