--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,17 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           submodules: true
 
-      - name: 设置 pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-
       - name: 设置 Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
       - name: 安装依赖
-        run: |
-          corepack enable
-          pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: 构建文档
         env:
